<resources>
    <string name="app_name">GitHub Users</string>

    <string name="main_menu_title_users_list">Users</string>
    <string name="main_menu_title_more">More</string>
    <string name="main_menu_title_settings">Settings</string>

    <string name="fragment_users_title">Users</string>
    <string name="fragment_user_title">User</string>
    <string name="fragment_user_login_title">Login</string>
    <string name="fragment_user_name_title">Name</string>
    <string name="fragment_user_html">Link in user\'s site</string>
    <string name="fragment_user_location_title">User location</string>
    <string name="fragment_user_followers_count">Followers count</string>
    <string name="fragment_user_following_count">Following count</string>
    <string name="fragment_more_title">More</string>
    <string name="fragment_settings_title">Settings</string>

    <string name="users_synchronize">Synchronize</string>
    <string name="root_sync_message_error">Sync error</string>
</resources>