<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatarIV"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_user_dark" />

    <TextView
        android:id="@+id/loginTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_user_login_title"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV"
        app:layout_constraintStart_toEndOf="@+id/avatarIV"
        app:layout_constraintTop_toTopOf="@+id/avatarIV" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/loginTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/loginTitleTV" />

    <TextView
        android:id="@+id/usernameTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_user_name_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineV"
        app:layout_constraintTop_toTopOf="@+id/loginTitleTV" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/usernameTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/usernameTitleTV" />

    <TextView
        android:id="@+id/locationTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_user_location_title"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV"
        app:layout_constraintStart_toStartOf="@+id/avatarIV"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <TextView
        android:id="@+id/locationTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/locationTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineV"
        app:layout_constraintTop_toTopOf="@+id/locationTitleTV" />

    <TextView
        android:id="@+id/linkTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_user_html"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV"
        app:layout_constraintStart_toStartOf="@+id/avatarIV"
        app:layout_constraintTop_toBottomOf="@+id/avatarIV" />

    <TextView
        android:id="@+id/linkTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/linkColor"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/linkTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineV"
        app:layout_constraintTop_toTopOf="@+id/linkTitleTV"
        tools:text="http://www.google.com" />

    <TextView
        android:id="@+id/followersTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/fragment_user_followers_count"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV"
        app:layout_constraintStart_toStartOf="@+id/linkTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/linkTitleTV" />

    <TextView
        android:id="@+id/followersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/followersTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/followersTitleTV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/followingTitleTV"
        style="@style/UserInfoTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_user_following_count"
        app:layout_constraintBottom_toBottomOf="@+id/followersTitleTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineV"
        app:layout_constraintTop_toTopOf="@+id/followersTitleTV" />

    <TextView
        android:id="@+id/followingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/followingTitleTV"
        app:layout_constraintTop_toBottomOf="@+id/followingTitleTV" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>